--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript-Calculator</title>
-    <link rel="stylesheet" type="text/css" href="calculator.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="calculator.css" />
+  </head>
+  <body>
     <div class="calculator">
-        <input type="text" id="display" disabled>
-        <button onclick="appendToDisplay('9')">9</button>
-        <button onclick="appendToDisplay('8')">8</button>
-        <button onclick="appendToDisplay('7')">7</button>
-        <button onclick="appendToDisplay('6')">6</button>
-        <button onclick="appendToDisplay('5')">5</button>
-        <button onclick="appendToDisplay('4')">4</button>
-        <button onclick="appendToDisplay('3')">3</button>
-        <button onclick="appendToDisplay('2')">2</button>
-        <button onclick="appendToDisplay('1')">1</button>
-        <button onclick="appendToDisplay('-')">-</button>
-        <button onclick="appendToDisplay('+')">+</button>
-        <button onclick="appendToDisplay('*')">*</button>
-        <button onclick="appendToDisplay('/')">/</button>
-        <button onclick="clearDisplay()">C</button>
-        <button onclick="calculate()">=</button>
+      <div class="inputBox">
+        <input class="input" id="display"  type="text" disabled />
+      </div>
+      <div class="firstRow">
+        <button class="clear" onclick="clearDisplay()">C</button>
+        <button class="division" onclick="appendToDisplay('/')">/</button>
+      </div>
+      <div class="secondRow">
+        <button class="colorStyle" onclick="appendToDisplay('7')">7</button>
+        <button class="colorStyle" onclick="appendToDisplay('8')">8</button>
+        <button class="colorStyle" onclick="appendToDisplay('9')">9</button>
+
+        <button class="minus" onclick="appendToDisplay('-')">-</button>
+      </div>
+      <div class="thirdRow">
+        <button class="colorStyle" onclick="appendToDisplay('4')">4</button>
+        <button class="colorStyle" onclick="appendToDisplay('5')">5</button>
+        <button class="colorStyle" onclick="appendToDisplay('6')">6</button>
+        <button class="multiply" onclick="appendToDisplay('*')">*</button>
+
+      </div>
+      <div class="fourthRow">
+        <button class="colorStyle" onclick="appendToDisplay('1')">1</button>
+        <button class="colorStyle" onclick="appendToDisplay('2')">2</button>
+        <button class="colorStyle" onclick="appendToDisplay('3')">3</button>   
+      </div>
+      <div class="plus">
+        <button id="plus" onclick="appendToDisplay('+')">+</button>
+      </div>
+
+      <div class="fifthRow">
+        <button class="colorStyle" onclick="appendToDisplay('0')">0</button>
+        <button onclick="appendToDisplay('.')">.</button>
+        <button class="equal" onclick="calculate()">=</button>
+      </div>
     </div>
     <script src="calculator.js"></script>
-    
-</body>
+  </body>
 </html>
