--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="calculator.css" />
   </head>
   <body>
+    <!-- calculator container -->
     <div class="calculator">
+      <!-- The input box, where the claculations will be displayed -->
       <div class="inputBox">
         <input class="input" id="display" type="text" disabled />
       </div>
